@@ -6,9 +6,9 @@ import mt.client.MidnightThoughtsClient;
 import mt.client.model.Slide;
 import mt.client.model.SlideCategory;
 import mt.client.model.SlideCollection;
-import net.minecraft.resource.Resource;
-import net.minecraft.resource.ResourceManager;
-import net.minecraft.util.Identifier;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.server.packs.resources.Resource;
+import net.minecraft.server.packs.resources.ResourceManager;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -29,9 +29,9 @@ public class SlideRepository {
     private final Map<String, Map<SlideCategory, List<Slide>>> slideCache = new HashMap<>();
 
     public void loadAllSlides(ResourceManager manager) {
-        loadSlidesForLanguage(manager, "en_us");
-        loadSlidesForLanguage(manager, "de_de");
-        loadSlidesForLanguage(manager, "es_es");
+        for (String language : mt.common.SupportedLanguages.codes()) {
+            loadSlidesForLanguage(manager, language);
+        }
     }
 
     private void loadSlidesForLanguage(ResourceManager manager, String language) {
@@ -51,70 +51,74 @@ public class SlideRepository {
 
     private List<Slide> loadCategory(ResourceManager manager, String language, String fileName, SlideCategory category) {
         List<Slide> slides = new ArrayList<>();
-        Identifier resourceId = Identifier.of(MidnightThoughtsClient.MOD_ID, "dreams/" + language + "/" + fileName + ".json");
+        ResourceLocation resourceId = new ResourceLocation(MidnightThoughtsClient.MOD_ID, "dreams/" + language + "/" + fileName + ".json");
 
-        Optional<Resource> resourceOpt = manager.getResource(resourceId);
-        if (resourceOpt.isEmpty()) {
-            LOGGER.debug("Resource not found: {}", resourceId);
-            return slides;
-        }
-
-        try (InputStreamReader reader = new InputStreamReader(resourceOpt.get().getInputStream(), StandardCharsets.UTF_8)) {
-            SlideCollection collection = GSON.fromJson(reader, SlideCollection.class);
-
-            if (collection != null && collection.entries() != null) {
-                for (SlideCollection.SlideEntry entry : collection.entries()) {
-                    slides.add(Slide.ofRare(entry.text(), category, entry.rarity()));
+        try {
+            Optional<Resource> resourceOpt = manager.getResource(resourceId);
+            if (resourceOpt.isEmpty()) {
+                return slides;
+            }
+            try (InputStreamReader reader = new InputStreamReader(resourceOpt.get().open(), StandardCharsets.UTF_8)) {
+                SlideCollection collection = GSON.fromJson(reader, SlideCollection.class);
+                if (collection != null && collection.entries() != null) {
+                    for (SlideCollection.SlideEntry entry : collection.entries()) {
+                        if (entry == null || entry.text() == null || entry.text().isBlank()) continue;
+                        float rarity = entry.rarity() > 0f ? entry.rarity() : 1.0f;
+                        slides.add(Slide.ofRare(entry.text(), category, rarity));
+                    }
                 }
             }
-
-            LOGGER.debug("Loaded {} slides from {}", slides.size(), resourceId);
         } catch (Exception e) {
             LOGGER.error("Failed to load slides from {}: {}", resourceId, e.getMessage());
         }
-
         return slides;
     }
 
     public List<Slide> getSlidesByCategory(String language, SlideCategory category) {
-        Map<SlideCategory, List<Slide>> categoryMap = slideCache.get(language);
-        if (categoryMap == null) {
-            categoryMap = slideCache.get("en_us");
+        List<Slide> slides = slidesFrom(slideCache.get(language), category);
+        if (!slides.isEmpty()) {
+            return slides;
         }
+        if (!mt.common.SupportedLanguages.DEFAULT.equals(language)) {
+            return slidesFrom(slideCache.get(mt.common.SupportedLanguages.DEFAULT), category);
+        }
+        return List.of();
+    }
+
+    private List<Slide> slidesFrom(Map<SlideCategory, List<Slide>> categoryMap, SlideCategory category) {
         if (categoryMap == null) {
             return List.of();
         }
-
         List<Slide> slides = categoryMap.get(category);
         return slides != null ? slides : List.of();
     }
 
     public Slide getRandomSlide(String language, SlideCategory category) {
         List<Slide> slides = getSlidesByCategory(language, category);
-        if (slides.isEmpty()) return null;
+        if (slides.isEmpty()) {
+            return null;
+        }
         return slides.get(ThreadLocalRandom.current().nextInt(slides.size()));
     }
 
     public Slide getRandomSlideByRarity(String language, SlideCategory category) {
         List<Slide> slides = getSlidesByCategory(language, category);
-        if (slides.isEmpty()) return null;
-
+        if (slides.isEmpty()) {
+            return null;
+        }
         float totalWeight = 0;
         for (Slide slide : slides) {
             totalWeight += slide.rarity();
         }
-
         float random = ThreadLocalRandom.current().nextFloat() * totalWeight;
         float currentWeight = 0;
-
         for (Slide slide : slides) {
             currentWeight += slide.rarity();
             if (random <= currentWeight) {
                 return slide;
             }
         }
-
-        return slides.getLast();
+        return slides.get(slides.size() - 1);
     }
 
     public void clearCache() {
